improved UI: fixed overflow and unvisited links

--- a/src/app.scss
+++ b/src/app.scss
@@ -2,7 +2,7 @@
   min-height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  grid-template-columns: 100vw;
+  grid-template-columns: 100%;
 
   &-main {
     padding-top: 60px;
