--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -38,7 +38,6 @@ li {
   font-family: $text-font;
 }
 
-a,
-a:link {
+a {
   color: $accent-color-dark;
 }
